--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
   <title>Learn Code</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1>Welcome to visit the "Learn Code" Site!</h1>
