--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Welcome to visit the "Learn Code" Site!</h1>
+  <h1 class="red">Welcome to visit the "Learn Code" Site!</h1>
   <p>Test</p>
 </body>
 </html>
