--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 </head>
 <body>
   <h1 class="red">Welcome to visit the "Learn Code" Site!</h1>
-  <p>Test</p>
+  <button id="btn" onclick="handle_click()">OUO</button>
+  <script src="script.js"></script>
 </body>
 </html>
