--- a/index.html
+++ b/index.html
@@ -1,2 +1,9 @@
-
+<html>
+<head>
+  <title>Learn Code</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+</body>
+</html>
 <span>Welcome To Learn Code!</span>
