--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
+<!DOCTYPE html>
 <html>
-<head>
-  <title>Learn Code</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <span>Welcome To Learn Code!</span>
-</body>
+  <head>
+    <title>
+      Learn Code
+    </title>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <span>
+      Hello World!
+    </span>
+  </body>
 </html>
 
