--- a/index.html
+++ b/index.html
@@ -12,4 +12,8 @@
     </span>
   </body>
 </html>
+<link href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/themes/prism.min.css" rel="stylesheet" />
+<script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/prism.min.js"></script>
+
+<pre><code class="language-css">@keyframes rounded-mask-reveal { ... }</code></pre>
 
