--- a/pages/1.html
+++ b/pages/1.html
@@ -11,7 +11,7 @@
 </head>
 
 <body style="background-color:#0D1117">
-  <audio autoplay src="../bgm.mp3"></audio>
+  <audio autoplay controls src="../bgm.mp3"></audio>
   <div class="shape" style="font-size: 7vw;" id="open">
     <pre><code class="language-java">int i</code></pre>
   </div>
