--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
             var audio = document.createElement("audio");
             audio.autoplay = true;
+            audio.controls = true;
             audio.src = "./bgm.mp3";
             audio.loop = true;
             document.body.appendChild(audio);
