--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/languages/java.js"></script>
     <script>hljs.highlightAll();</script>
+    <meta property="og:image" content="./logo.webp">
+    <meta property="og:description" content="描述">
 </head>
 
 <body style="background-color:#0D1117">
