--- a/index.html
+++ b/index.html
@@ -2,13 +2,17 @@
 <html>
 
 <head>
+    <title>Learn Code: Master Programming with Ease</title>
+    <meta name="description" content="Learn Code: Discover, learn, and master coding skills with engaging tutorials and practical exercises. Your journey to coding excellence starts here." />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/github-dark.css">
     <link rel="stylesheet" href="./style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/languages/java.js"></script>
     <script>hljs.highlightAll();</script>
     <meta property="og:image" content="./logo.webp">
-    <meta property="og:description" content="描述">
+    <meta property="og:url" content="LearnCodeDebug.github.io">
+    <meta property="og:title" content="Learn Code: Master Programming with Ease">
+    <meta property="og:description" content="Learn Code: Discover, learn, and master coding skills with engaging tutorials and practical exercises. Your journey to coding excellence starts here.">
 </head>
 
 <body style="background-color:#0D1117">
