--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/languages/java.js"></script>
     <script>hljs.highlightAll();</script>
-    <meta property="og:image" content="logo.jpg">
+    <meta property="og:image" content="https://github.com/LearnCodeDebug/LearnCodeDebug.github.io/blob/main/logo.jpg">
     <meta property="og:url" content="LearnCodeDebug.github.io">
     <meta property="og:title" content="Learn Code: Master Programming with Ease">
     <meta property="og:description" content="Learn Code: Discover, learn, and master coding skills with engaging tutorials and practical exercises. Your journey to coding excellence starts here.">
