--- a/index.html
+++ b/index.html
@@ -16,8 +16,13 @@
 </head>
 
 <body style="background-color:#0D1117">
-    <div class="shape" style="font-size: 3vw;">
-        <pre><code class="language-java">在Java語言當中，";"等價為句號</code></pre>
+    <div id="flex-container">
+        <div class="shape" style="font-size: 3vw;" id="flex-item">
+            <pre><code class="language-java">在Java語言當中，";"等價為句號</code></pre>
+        </div>
+        <div class="shape" style="font-size: 3vw;" id="flex-item">
+            <pre><code class="language-java">Hello!</code></pre>
+        </div>
     </div>
     <script>
         setTimeout(() => {
